--- a/admin/cuentas/index.html
+++ b/admin/cuentas/index.html
@@ -269,6 +269,13 @@
         </div>
     </div>
 
+    <!-- Spinner Global -->
+    <div id="globalSpinner" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); z-index: 9999; justify-content: center; align-items: center;">
+        <div class="spinner-border text-light" style="width: 3rem; height: 3rem;" role="status">
+            <span class="visually-hidden">Cargando...</span>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../../shared/js/utils.js"></script>
     <script src="../../shared/js/api.js"></script>
