--- a/cliente/dashboard.html
+++ b/cliente/dashboard.html
@@ -6,7 +6,7 @@
     <title>Dashboard Cliente - Banco Virtual</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../shared/css/styles.css">
+    <link rel="stylesheet" href="../shared/css/global.css">
     <link rel="stylesheet" href="css/cliente.css">
 </head>
 <body>
@@ -39,7 +39,7 @@
                         <ul class="dropdown-menu dropdown-menu-end">
                             <li><a class="dropdown-item" href="perfil/index.html"><i class="bi bi-person"></i> Mi Perfil</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#" onclick="cerrarSesion()"><i class="bi bi-box-arrow-right"></i> Cerrar Sesión</a></li>
+                            <li><a class="dropdown-item" href="#" onclick="event.preventDefault(); confirmarCerrarSesion();"><i class="bi bi-box-arrow-right"></i> Cerrar Sesión</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -177,6 +177,7 @@
     <script src="../shared/js/api.js"></script>
     <script src="../shared/js/auth.js"></script>
     <script src="../shared/js/utils.js"></script>
+    <script src="js/logout.js"></script>
     <script src="js/dashboard.js"></script>
 </body>
 </html>
