--- a/cliente/retirar/index.html
+++ b/cliente/retirar/index.html
@@ -33,7 +33,7 @@
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#" onclick="cerrarSesion()">
+                        <a class="nav-link" href="#" onclick="event.preventDefault(); confirmarCerrarSesion();">
                             <i class="bi bi-box-arrow-right"></i> Cerrar Sesión
                         </a>
                     </li>
@@ -125,6 +125,7 @@
     <script src="../../shared/js/api.js"></script>
     <script src="../../shared/js/auth.js"></script>
     <script src="../../shared/js/utils.js"></script>
+    <script src="../js/logout.js"></script>
     <script>
         let cuentaCliente = null;
         const modalConfirmacion = new bootstrap.Modal(document.getElementById('modalConfirmacion'));
@@ -142,7 +143,7 @@
 
         async function cargarCuenta() {
             try {
-                const response = await apiCall('/cuentas/mis-cuentas', { method: 'GET' });
+                const response = await apiCall('/cuentas/mis-cuentas', 'GET', null);
                 
                 if (response.cuentas && response.cuentas.length > 0) {
                     cuentaCliente = response.cuentas.find(c => c.estado === 'activa') || response.cuentas[0];
@@ -188,13 +189,10 @@
             btnRetirar.innerHTML = '<span class="spinner-border spinner-border-sm me-2"></span>Procesando...';
 
             try {
-                const response = await apiCall('/transacciones/retiro', {
-                    method: 'POST',
-                    body: JSON.stringify({
-                        id_cuenta_origen: cuentaCliente.id_cuenta,
-                        monto: monto,
-                        descripcion: descripcion
-                    })
+                const response = await apiCall('/transacciones/retiro', 'POST', {
+                    id_cuenta: cuentaCliente.id_cuenta,
+                    monto: monto,
+                    descripcion: descripcion
                 });
 
                 // Actualizar saldo
@@ -216,13 +214,6 @@
             } finally {
                 btnRetirar.disabled = false;
                 btnRetirar.innerHTML = '<i class="bi bi-cash"></i> Realizar Retiro';
-            }
-        }
-
-        function cerrarSesion() {
-            if (confirm('¿Estás seguro de que deseas cerrar sesión?')) {
-                logout();
-                window.location.href = '../../index.html';
             }
         }
 
