dashaboard cliente actualizado

--- a/cliente/dashboard.html
+++ b/cliente/dashboard.html
@@ -25,6 +25,9 @@
                         <a class="nav-link active" href="dashboard.html"><i class="bi bi-house-door"></i> Inicio</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="prestamos/index.html"><i class="bi bi-cash-stack"></i> Préstamos</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="movimientos/index.html"><i class="bi bi-clock-history"></i> Movimientos</a>
                     </li>
                     <li class="nav-item">
